<resources>
    <string name="app_name">Bless Up</string>
    <string name="selectReligion">Select your Religion</string>
    <string name="confirm">CONFIRM</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_name">Your Name</string>
    <string name="prompt_email">Your Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="send_message">"SEND"</string>
    <string name="DateOfBirth">Your Date of Birth</string>
    <string name="action_register">Register</string>
    <string name="prompt_repassword">Re-Type Password</string>
    <string name="loginTextBlurb">Join Bless Up today to connect with your congregation and others</string>
    <string name="loginButtonText"> Login </string>
    <string name="churchListingExpand"> Expand Church List </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="church_image">Failed to load church image</string>
    <string name="join_church">Join Church</string>
    <string name="registerRedirectText">Don\'t have an account? Sign up</string>
    <string name="loginRedirectText">Already have an account? Sign In</string>
    <string name="chatMessagePrompt">Type Message</string>
    <string name="chatChannelsText">Chats</string>
    <string name="tvNotAMember">Join a church to start talking</string>
    <string name="viewChurches">view churches</string>
    <string name="appGreeting">Connect and convocate with others</string>
    <string name="churchNamePlaceholder">Church Name</string>
    <string name="app_slogan">"Connect and convocate with others "</string>
    <string name="selectChatButtonText">Chats and groups</string>
    <string name="selectChurchButtonText">Find a church</string>
    <string name="selectReligionButtonText">Update your religion</string>
    <string name="welcome2">Welcome</string>
    <string name="welcome_desc">Welcome to Bless Up, were here to help you connect and grow with communities near you.</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="About_Us_Desc">We built Bless Up to help you connect. Bless Up is a community and chat service used by people who want to connect and convocate with their family, friends, and community.</string>
    <string name="namePlaceHolder">Mr. Lahey</string>
    <string name="incorrectCredentials">Your Email or Password is incorrect. Please try again or Sign up for an account.</string>
    <string name="emailRequired">Email is Required</string>
    <string name="passwordRequired">Password is Required</string>
    <string name="nameRequired">Name is Required</string>
    <string name="loggingIn">Logging in...</string>
    <string name="userCreated">User created.</string>
    <string name="errorCreateUser">Error! </string>
    <string name="identicalPasswords">Both passwords must be identical.</string>
    <string name="minPasswordLength">Password must be at least 6 characters.</string>
</resources>
