<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/chat_background"
    android:fillViewport="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarChatChannels">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarNotAMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:navigationContentDescription="Navigation Description"
            app:navigationIcon="@drawable/navigation_back">

            <TextView
                android:id="@+id/tvChatChannelsToolBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chatChannelsText"
                android:textColor="@color/pureWhite"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/ivNotAMember"
        android:layout_width="175dp"
        android:layout_height="151dp"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/appBarChatChannels"
        android:background="@drawable/church"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/tvNotAMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivNotAMember"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/indigo_daisy"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:text="@string/tvNotAMember"
        android:textSize="75sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNotAMember"
        android:layout_marginTop="15dp"
        android:background="@drawable/green_gradient"
        android:layout_centerHorizontal="true"
        android:text="@string/viewChurches"
        android:onClick="onViewChurches"
        app:backgroundTint="@null"
        app:icon="@drawable/search" />
</RelativeLayout>